Some final cleanup

--- a/IpcClient.Demo/IpcClient.Demo.csproj
+++ b/IpcClient.Demo/IpcClient.Demo.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>net5.0-windows</TargetFramework>
     <OutputType>Exe</OutputType>
-    <RootNamespace>IpcClient</RootNamespace>
+    <RootNamespace>IpcLib.Demo</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
