--- a/IpcLib/IpcLib.csproj
+++ b/IpcLib/IpcLib.csproj
@@ -4,4 +4,8 @@
     <TargetFrameworks>net5.0;netstandard2.0</TargetFrameworks>
   </PropertyGroup>
 
+  <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
+    <DebugType>none</DebugType>
+  </PropertyGroup>
+
 </Project>
